# studienarbeit-edrl

./: .project  EDRL.cabal  README.md  Specification  commands
app/: Main.hs  event-example.hs
benchmark/: Bench.hs
docs/html/EDRL/: DataDefinitions.html  EDRL.haddock  EDRL.txt  Interpreter.html  YMLReader.html  doc-index.html  index.html
docs/html/EDRL/src/: DataDefinitions.html  Interpreter.html  YMLReader.html
resource/: app1.yml  example.edrl  posibillity2.edrl  posibillity3.edrl  rel1.yml  rel2.yml  rel3.yml
src/: DataDefinitions.hs  Interpreter.hs  Lib.hs  YMLReader.hs
test/: DataDefinitionsSpec.hs  InterpreterSpec.hs  YMLReaderSpec.hs
