name:                EDRL
-- license:
-- synopsis:
-- description:
category:            Misc
version:             0.1.0.0
-- homepage:
-- license-file:
-- author:
-- maintainer:
copyright:           2017 Author name here
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Interpreter,DataDefinitions, YMLReader
  build-depends:       base
                       , yaml
                       , containers
  default-language:    Haskell2010

executable EDRL-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , yaml
                     , EDRL
                     , bytestring
                     , containers
  default-language:    Haskell2010

test-suite EDRL-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  other-modules:       InterpreterSpec, YMLReaderSpec
  main-is:             Spec.hs
  build-depends:       base
                     , EDRL
                     , containers
                     , hspec
                     , QuickCheck
                     , yaml
                     , bytestring
                     , text
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location:
benchmark criterion
  type:  exitcode-stdio-1.0
  hs-source-dirs:  benchmark
  main-is:  Bench.hs
  build-depends:  base
                , EDRL
                , criterion
  ghc-options:  -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
